Update favicon e description

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Author -->
     <meta name="author" content="NextGrid">
     <!-- description -->
-    <meta name="description" content="">
+    <meta name="description" content="Energia elétrica para empresas que desejam economizar nas contas e ajudar a preservar os recursos naturais do planeta.">
     <!-- keywords -->
     <meta name="keywords" content="COOGD, energia, vilhena">
     <!-- Meta Tags -->
@@ -12,7 +12,7 @@
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
     <!-- Page Title -->
     <title>COOGD - Cooperativa Rodoniense de geração distribuida de energia elétrica</title>
-    <link href="images/favicon.ico" rel="icon">
+    <link href="images/favicon.png" rel="icon">
     <link rel="stylesheet" href="vendor/css/bundle.min.css">
     <link rel="stylesheet" href="vendor/css/owl.carousel.min.css">
     <link rel="stylesheet" href="vendor/css/jquery.fancybox.min.css">
