Tirando os depoimentos

--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
     </div>
 </section>
 <!-- Counters ends-->
-<!-- Our Team-->
+<!-- Clientes
 <section id="our-team" class="padding_top half-section-alt teams-border">
     <div class="container">
         <div class="row">
@@ -587,8 +587,7 @@
         </div>
     </div>
 </section>
-<!-- Our Team ends-->
-<!-- Partners-->
+
 <section id="our-partners" class="padding_top padding_bottom bglight ">
     <div class="container">
         <div class="row">
@@ -629,7 +628,7 @@
         </div>
     </div>
 </section>
-<!-- Partners ends-->
+Partners ends-->
 
 <!-- Testimonial
 <section id="our-testimonial" class="bglight padding_bottom">
