--- a/Site/index.html
+++ b/Site/index.html
@@ -586,7 +586,7 @@
             </div>
         </div>
     </div>
-</section>
+</section>Partners ends-->
 
 <section id="our-partners" class="padding_top padding_bottom bglight ">
     <div class="container">
@@ -594,41 +594,23 @@
             <div class="col-md-12 col-sm-12">
                 <div id="partners-slider" class="owl-carousel">
                     <div class="item">
-                        <div class="logo-item"> <img alt="" src="images/logo-1.png"></div>
+                        <div class="logo-item"> <img alt="Friron" src="images/Logos/friron.png"></div>
                     </div>
                     <div class="item">
-                        <div class="logo-item"><img alt="" src="images/logo-1.png"></div>
+                        <div class="logo-item"><img alt="HCR" src="images/Logos/HCR.png"></div>
                     </div>
                     <div class="item">
-                        <div class="logo-item"><img alt="" src="images/logo-1.png"></div>
+                        <div class="logo-item"><img alt="Piemon" src="images/Logos/piemon.png"></div>
                     </div>
                     <div class="item">
-                        <div class="logo-item"><img alt="" src="images/logo-1.png"></div>
-                    </div>
-                    <div class="item">
-                        <div class="logo-item"><img alt="" src="images/logo-1.png"></div>
-                    </div>
-                    <div class="item">
-                        <div class="logo-item"><img alt="" src="images/logo-1.png"></div>
-                    </div>
-                    <div class="item">
-                        <div class="logo-item"><img alt="" src="images/logo-1.png"></div>
-                    </div>
-                    <div class="item">
-                        <div class="logo-item"><img alt="" src="images/logo-1.png"></div>
-                    </div>
-                    <div class="item">
-                        <div class="logo-item"><img alt="" src="images/logo-1.png"></div>
-                    </div>
-                    <div class="item">
-                        <div class="logo-item"><img alt="" src="images/logo-1.png"></div>
+                        <div class="logo-item"><img alt="Rical" src="images/Logos/rical.png"></div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </section>
-Partners ends-->
+
 
 <!-- Testimonial
 <section id="our-testimonial" class="bglight padding_bottom">
