--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
             <div class="collapse navbar-collapse icon-mobile">
                 <ul class="navbar-nav ml-auto social-icons-simple icon-white">
                     <li class="d-table">
-                        <a href="javascript:void(0)" class="facebook">
+                        <a href="https://www.facebook.com/coogd.energia/" class="facebook">
                             <i class="fab fa-facebook-f"></i></a></li>
                     <li class="d-table">
-                        <a href="javascript:void(0)" class="insta">
+                        <a href="https://www.instagram.com/coogd.energia/" class="insta">
                             <i class="fab fa-instagram"></i></a></li>
                 </ul>
             </div>
@@ -109,7 +109,7 @@
                         data-responsive_offset="on" data-start="2500"
                         data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","mask":"x:0px;y:[100%];s:inherit;e:inherit;","speed":1500,"to":"o:1;","delay":2500,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'>
                         <div class="d-flex wow fadeInLeft" data-wow-delay="300ms" style="visibility: visible; animation-delay: 300ms; animation-name: fadeInLeft;">
-                            <a href="javascript:void(0)" class="button gradient-btn mb-sm-0 mb-4">QUERO ECONOMIZAR</a>
+                            <a href="https://wa.me/5569992374830?text=Olá,%20estou%20no%20seu%20site,%20poderia%20me%20ajudar?" class="button gradient-btn mb-sm-0 mb-4">QUERO ECONOMIZAR</a>
                         </div>
                     </div>
 
@@ -168,7 +168,7 @@
                         data-responsive_offset="on" data-start="2500"
                         data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","mask":"x:0px;y:[100%];s:inherit;e:inherit;","speed":1500,"to":"o:1;","delay":2500,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'>
                         <div class="d-flex wow fadeInLeft" data-wow-delay="300ms" style="visibility: visible; animation-delay: 300ms; animation-name: fadeInLeft;">
-                            <a href="javascript:void(0)" class="button gradient-btn mb-sm-0 mb-4">QUERO ECONOMIZAR</a>
+                            <a href="https://wa.me/5569992374830?text=Olá,%20estou%20no%20seu%20site,%20poderia%20me%20ajudar?" class="button gradient-btn mb-sm-0 mb-4">QUERO ECONOMIZAR</a>
                         </div>
                     </div>
                 </li>
@@ -226,7 +226,7 @@
                         data-responsive_offset="on" data-start="2500"
                         data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","mask":"x:0px;y:[100%];s:inherit;e:inherit;","speed":1500,"to":"o:1;","delay":2500,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'>
                         <div class="d-flex wow fadeInLeft" data-wow-delay="300ms" style="visibility: visible; animation-delay: 300ms; animation-name: fadeInLeft;">
-                            <a href="javascript:void(0)" class="button gradient-btn mb-sm-0 mb-4">QUERO ECONOMIZAR</a>
+                            <a href="https://wa.me/5569992374830?text=Olá,%20estou%20no%20seu%20site,%20poderia%20me%20ajudar?" class="button gradient-btn mb-sm-0 mb-4">QUERO ECONOMIZAR</a>
                         </div>
                     </div>
                 </li>
@@ -234,8 +234,8 @@
         </div>
     </div>
     <ul class="social-icons-simple revicon white">
-        <li class="d-table"><a href="javascript:void(0)" class="facebook"><i class="fab fa-facebook-f"></i></a></li>
-        <li class="d-table"><a href="javascript:void(0)" class="insta"><i class="fab fa-instagram"></i></a></li>
+        <li class="d-table"><a href="https://www.facebook.com/coogd.energia/" class="facebook"><i class="fab fa-facebook-f"></i></a></li>
+        <li class="d-table"><a href="https://www.instagram.com/coogd.energia/" class="insta"><i class="fab fa-instagram"></i></a></li>
     </ul>
 </section>
 <!--Home End-->
@@ -280,7 +280,9 @@
                     <h2 class="darkcolor font-normal bottom30">Junte-se à <span class="defaultcolor">COOGD</span>!</h2>
                 </div>
                 <p class="bottom35 font-18">Energia elétrica para empresas que desejam economizar nas contas e ajudar a preservar os recursos naturais do planeta.</p>
-                <a type="button" data-toggle="modal" data-target="#myModal" href="javascript:void(0)" class="button gradient-btn mb-sm-0 mb-4">QUERO ECONOMIZAR</a>
+                <a href="https://wa.me/5569992374830?text=Olá,%20estou%20no%20seu%20site,%20poderia%20me%20ajudar?" class="button gradient-btn mb-sm-0 mb-4">QUERO ECONOMIZAR</a>
+                <!-- <a type="button" data-toggle="modal" data-target="#myModal" href="javascript:void(0)" class="button gradient-btn mb-sm-0 mb-4">QUERO ECONOMIZAR</a> -->
+                
             </div>
             <div class="col-9 col-md-5 col-lg-4 wow fadeInRight" data-wow-delay="300ms">
                 <div class="image top50"><img src="images/i1.png"></div>
@@ -842,7 +844,7 @@ testimonials end-->
                     <form class="getin_form wow fadeInUp" data-wow-delay="400ms">
                         <div class="row justify-content-center">
                             <div class="col-md-3 col-sm-6 ">
-                                <button class="button gradient-btn w-100"><i style="margin: 10px;" class="fab fa-whatsapp"></i>Whatsapp</button>
+                                <a class="button gradient-btn w-100 text-white" href="https://wa.me/5569992374830?text=Olá,%20estou%20no%20seu%20site,%20poderia%20me%20ajudar?"><i style="margin: 10px;" class="fab fa-whatsapp"></i>Whatsapp</a>
                             </div>
                         </div>
                     </form>
