--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <link rel="stylesheet" href="vendor/css/revolution-settings.min.css">
     <link rel="stylesheet" href="css/revolution/navigation.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/jlplayer.css">
+    
 </head>
 <body>
 <!--PreLoader-->
@@ -284,8 +286,14 @@
                 <!-- <a type="button" data-toggle="modal" data-target="#myModal" href="javascript:void(0)" class="button gradient-btn mb-sm-0 mb-4">QUERO ECONOMIZAR</a> -->
                 
             </div>
-            <div class="col-9 col-md-5 col-lg-4 wow fadeInRight" data-wow-delay="300ms">
-                <div class="image top50"><img src="images/i1.png"></div>
+            <div class="col-12 col-md-5 col-lg-6 wow fadeInRight" data-wow-delay="300ms">
+                <div class="image top50">
+                    <form class="video-container" action="" method="GET">
+                        <video preload="auto" class="jlplayer-video">
+                            <source src="video/COOGD.mp4" type="video/mp4">
+                        </video>
+                    </form>                
+                </div>
             </div>
         </div>
     </div>
@@ -926,7 +934,7 @@ z-index:1000;" target="_blank">
     </div>
 </div>
 
-<!-- End modal -->
+<script src="js/jlplayer.js" async></script>
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="vendor/js/bundle.min.js"></script>
 <!--to view items on reach-->
