--- a/index.html
+++ b/index.html
@@ -869,7 +869,7 @@ testimonials end-->
             <div class="col-lg-3 col-md-6 col-sm-6">
                 <div class="footer_panel padding_bottom_half bottom20">
                     <a href="index.html" class="footer_logo bottom25"><img src="images/logo/Logo branca.png"></a>
-                    <p class="whitecolor bottom25">Cooperativa Rodoniense de Geração Distribuida de Energia Elétrica
+                    <p class="whitecolor bottom25">Cooperativa Rondoniense de Geração Distribuida de Energia Elétrica
                     </p>
                     <div class="d-table w-100 address-item whitecolor bottom25">
                         <span class="d-table-cell align-middle"><i class="fas fa-mobile-alt"></i></span>
