--- a/novo/404.html
+++ b/novo/404.html
@@ -17,8 +17,10 @@
     <link rel="stylesheet" href="css/plugins/fancybox.min.css">
     <!-- ashley scss -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- favicon -->
+    <link rel="icon" type="image/png" href="img/partners/favicon.png">
     <!-- page name -->
-    <title>Ashley</title>
+    <title>COOGD</title>
 
 </head>
 
@@ -43,14 +45,14 @@
         <div class="mil-preloader">
             <div class="mil-preloader-animation">
                 <div class="mil-pos-abs mil-animation-1">
-                    <p class="mil-h3 mil-muted mil-thin">Pioneering</p>
-                    <p class="mil-h3 mil-muted">Creative</p>
-                    <p class="mil-h3 mil-muted mil-thin">Excellence</p>
+                    <p class="mil-h3 mil-muted mil-thin">Energia.</p>
+                    <p class="mil-h3 mil-muted">Economia.</p>
+                    <p class="mil-h3 mil-muted mil-thin">Futuro.</p>
                 </div>
                 <div class="mil-pos-abs mil-animation-2">
                     <div class="mil-reveal-frame">
                         <p class="mil-reveal-box"></p>
-                        <p class="mil-h3 mil-muted mil-thin">ashley.com</p>
+                        <p class="mil-h3 mil-muted mil-thin">coogd.com.br</p>
                     </div>
                 </div>
             </div>
@@ -67,7 +69,7 @@
         <div class="mil-menu-frame">
             <!-- frame clone -->
             <div class="mil-frame-top">
-                <a href="home-1.html" class="mil-logo">A.</a>
+                <a href="home-1.html" class="mil-logo"><img src="img/partners/logo.webp" alt="COOGD Logo" style="height:40px;"></a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -111,7 +113,7 @@
                                         </ul>
                                     </li>
                                     <li class="mil-has-children mil-active">
-                                        <a href="#.">Other pages</a>
+                                        <a href="#.">COOGD ENERGY</a>
                                         <ul>
                                             <li><a href="team.html">Team</a></li>
                                             <li><a href="contact.html">Contact</a></li>
@@ -194,7 +196,7 @@
         <!-- frame -->
         <div class="mil-frame">
             <div class="mil-frame-top">
-                <a href="home-1.html" class="mil-logo">A.</a>
+                <a href="home-1.html" class="mil-logo"><img src="img/partners/logo.webp" alt="COOGD Logo" style="height:60px;"></a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -203,7 +205,7 @@
                 <div class="mil-current-page"></div>
                 <div class="mil-back-to-top">
                     <a href="#top" class="mil-link mil-dark mil-arrow-place">
-                        <span>Back to top</span>
+                        <span>Voltar ao início</span>
                     </a>
                 </div>
             </div>
@@ -229,9 +231,9 @@
 
                                 </div>
 
-                                <h4 class="mil-404-text mil-dark mil-mb-60">Oops! Something went wrong :(</h4>
+                                <h4 class="mil-404-text mil-dark mil-mb-60">Ops! Algo deu errado :(</h4>
                                 <a href="home-1.html" class="mil-button mil-arrow-place">
-                                    <span>Back to homepage</span>
+                                    <span>Voltar à página inicial</span>
                                 </a>
                             </div>
 
