--- a/novo/home-1.html
+++ b/novo/home-1.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="css/plugins/fancybox.min.css">
     <!-- ashley scss -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/video-frame.css">
     <!-- favicon -->
     <link rel="icon" type="image/png" href="img/partners/favicon.png">
     <!-- page name -->
@@ -280,8 +281,6 @@
                                     <h2 class="mil-up mil-mb-60">Junte-se <br>à <span class="mil-up">COOGD!</span></h2>
                                     <p class="mil-up mil-mb-30">Na <strong>COOGD</strong>, você encontra uma forma inteligente de reduzir custos e, ao mesmo tempo, contribuir para um futuro mais sustentável. Nossa energia vem de usinas 100% renováveis, garantindo que sua empresa economize nas contas de luz enquanto participa ativamente da preservação dos recursos naturais do planeta.</p>
 
-                                    <p class="mil-up mil-mb-60">Ao se tornar cooperado, sua empresa passa a ter acesso a créditos de energia que geram economia real mês a mês, sem necessidade de investimentos em infraestrutura própria. E o melhor: sem taxa de adesão, sem instalação de equipamentos e sem contrato de fidelidade ou multa de cancelamento. É simples, seguro e vantajoso: você fortalece o seu negócio e ainda ajuda a construir um mundo mais limpo e responsável.</p>
-
                                     <div class="mil-about-quote">
                                         <div class="mil-avatar mil-up">
                                             <img src="img/faces/customers/2.jpg" alt="Founder">
@@ -295,8 +294,11 @@
 
                                 <div class="mil-about-photo mil-mb-90">
                                     <div class="mil-lines-place"></div>
-                                    <div class="mil-up mil-img-frame" style="padding-bottom: 160%;">
-                                        <img src="img/photo/1.jpg" alt="img" class="mil-scale" data-value-1="1" data-value-2="1.2">
+                                    <div class="mil-up mil-img-frame" style="padding-bottom: 56.25%;">
+                                        <video autoplay muted loop playsinline class="mil-scale" data-value-1="1" data-value-2="1.2">
+                                            <source src="../video/COOGD.mp4" type="video/mp4">
+                                            Your browser does not support the video tag.
+                                        </video>
                                     </div>
                                 </div>
 
@@ -380,113 +382,6 @@
                     </div>
                 </section>
                 <!-- services end -->
-
-
-                <!-- team -->
-                <section>
-                    <div class="container mil-p-120-30">
-                        <div class="row justify-content-between align-items-center">
-                            <div class="col-lg-5 col-xl-4">
-
-                                <div class="mil-mb-90">
-                                    <h2 class="mil-up mil-mb-60">Nossa equipe</h2>
-                                    <p class="mil-up mil-mb-30">Somos profissionais talentosos e apaixonados por transformar ideias em realidade. Com formações e habilidades diversas, trabalhamos em colaboração para criar soluções eficientes e inovadoras para nossos clientes.</p>
-
-                                    <p class="mil-up mil-mb-60">Juntos, nossa equipe dedicada se compromete a entregar resultados de impacto, que superam expectativas e impulsionam o futuro da energia.</p>
-
-                                    <div class="mil-up"><a href="#" class="mil-button mil-arrow-place mil-mb-60"><span>Saiba mais</span></a></div>
-
-                                    <h4 class="mil-up"><span class="mil-thin">Nós</span> entregamos <br><span class="mil-thin">resultados</span> exepcionais.</h4>
-                                </div>
-
-                            </div>
-                            <div class="col-lg-6">
-
-                                <div class="mil-team-list">
-                                    <div class="mil-lines-place"></div>
-
-                                    <div class="row mil-mb-60">
-                                        <div class="col-sm-6">
-
-                                            <div class="mil-team-card mil-up mil-mb-30">
-                                                <img src="img/faces/1.jpg" alt="Team member">
-                                                <div class="mil-description">
-                                                    <div class="mil-secrc-text">
-                                                        <h5 class="mil-muted mil-mb-5"><a href="home-2.html">Anna Oldman</a></h5>
-                                                        <p class="mil-link mil-light-soft mil-mb-10">Art Director</p>
-                                                        <ul class="mil-social-icons mil-center">
-                                                            <li><a href="#." target="_blank" class="social-icon"> <i class="fab fa-behance"></i></a></li>
-                                                            <li><a href="#." target="_blank" class="social-icon"> <i class="fab fa-dribbble"></i></a></li>
-                                                            <li><a href="#." target="_blank" class="social-icon"> <i class="fab fa-twitter"></i></a></li>
-                                                            <li><a href="#." target="_blank" class="social-icon"> <i class="fab fa-github"></i></a></li>
-                                                        </ul>
-                                                    </div>
-                                                </div>
-                                            </div>
-
-                                            <div class="mil-team-card mil-up mil-mb-30">
-                                                <img src="img/faces/3.jpg" alt="Team member">
-                                                <div class="mil-description">
-                                                    <div class="mil-secrc-text">
-                                                        <h5 class="mil-muted mil-mb-5"><a href="home-2.html">Oscar Freeman</a></h5>
-                                                        <p class="mil-link mil-light-soft mil-mb-10">Frontend Dev</p>
-                                                        <ul class="mil-social-icons mil-center">
-                                                            <li><a href="#." target="_blank" class="social-icon"> <i class="fab fa-behance"></i></a></li>
-                                                            <li><a href="#." target="_blank" class="social-icon"> <i class="fab fa-dribbble"></i></a></li>
-                                                            <li><a href="#." target="_blank" class="social-icon"> <i class="fab fa-twitter"></i></a></li>
-                                                            <li><a href="#." target="_blank" class="social-icon"> <i class="fab fa-github"></i></a></li>
-                                                        </ul>
-                                                    </div>
-                                                </div>
-                                            </div>
-
-                                        </div>
-                                        <div class="col-sm-6">
-
-                                            <p class="mil-mobile-hidden mil-text-sm mil-mb-30" style="height: 30px;"><span class="mil-accent">*</span> Os fundadores da COOGD</p>
-
-                                            <div class="mil-team-card mil-up mil-mb-30">
-                                                <img src="img/faces/2.jpg" alt="Team member">
-                                                <div class="mil-description">
-                                                    <div class="mil-secrc-text">
-                                                        <h5 class="mil-muted mil-mb-5"><a href="home-2.html">Emma Newman</a></h5>
-                                                        <p class="mil-link mil-light-soft mil-mb-10">Founder</p>
-                                                        <ul class="mil-social-icons mil-center">
-                                                            <li><a href="#." target="_blank" class="social-icon"> <i class="fab fa-behance"></i></a></li>
-                                                            <li><a href="#." target="_blank" class="social-icon"> <i class="fab fa-dribbble"></i></a></li>
-                                                            <li><a href="#." target="_blank" class="social-icon"> <i class="fab fa-twitter"></i></a></li>
-                                                            <li><a href="#." target="_blank" class="social-icon"> <i class="fab fa-github"></i></a></li>
-                                                        </ul>
-                                                    </div>
-                                                </div>
-                                            </div>
-
-                                            <div class="mil-team-card mil-up mil-mb-30">
-                                                <img src="img/faces/4.jpg" alt="Team member">
-                                                <div class="mil-description">
-                                                    <div class="mil-secrc-text">
-                                                        <h5 class="mil-muted mil-mb-5"><a href="home-2.html">Lisa Trueman</a></h5>
-                                                        <p class="mil-link mil-light-soft mil-mb-10">UI/UX Designer</p>
-                                                        <ul class="mil-social-icons mil-center">
-                                                            <li><a href="#." target="_blank" class="social-icon"> <i class="fab fa-behance"></i></a></li>
-                                                            <li><a href="#." target="_blank" class="social-icon"> <i class="fab fa-dribbble"></i></a></li>
-                                                            <li><a href="#." target="_blank" class="social-icon"> <i class="fab fa-twitter"></i></a></li>
-                                                            <li><a href="#." target="_blank" class="social-icon"> <i class="fab fa-github"></i></a></li>
-                                                        </ul>
-                                                    </div>
-                                                </div>
-                                            </div>
-
-                                        </div>
-                                    </div>
-
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
-                </section>
-                <!-- team end -->
 
                 <!-- reviews -->
                 <section class="mil-soft-bg">
@@ -1044,6 +939,7 @@
                             <div></div>
                         </div>
                     </div>
+                                    
 
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="mil-arrow">
                         <path d="M 14 5.3417969 C 13.744125 5.3417969 13.487969 5.4412187 13.292969 5.6367188 L 13.207031 5.7226562 C 12.816031 6.1136563 12.816031 6.7467188 13.207031 7.1367188 L 17.070312 11 L 4 11 C 3.448 11 3 11.448 3 12 C 3 12.552 3.448 13 4 13 L 17.070312 13 L 13.207031 16.863281 C 12.816031 17.254281 12.816031 17.887344 13.207031 18.277344 L 13.292969 18.363281 C 13.683969 18.754281 14.317031 18.754281 14.707031 18.363281 L 20.363281 12.707031 C 20.754281 12.316031 20.754281 11.682969 20.363281 11.292969 L 14.707031 5.6367188 C 14.511531 5.4412187 14.255875 5.3417969 14 5.3417969 z" />
