--- a/novo/home-1.html
+++ b/novo/home-1.html
@@ -479,16 +479,22 @@
                         <div class="swiper-container mil-infinite-show mil-up">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
-                                    <a href="#." class="mil-partner-frame" style="width: 60px;"><img src="img/partners/1.svg" alt="logo"></a>
+                                    <a href="#." class="mil-partner-frame" style="width: 150px;"><img src="img/partners/Agro.webp" alt="Agro"></a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="#." class="mil-partner-frame" style="width: 100px;"><img src="img/partners/2.svg" alt="logo"></a>
+                                    <a href="#." class="mil-partner-frame" style="width: 120px;"><img src="img/partners/HCR.png" alt="Hcr"></a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="#." class="mil-partner-frame" style="width: 60px;"><img src="img/partners/1.svg" alt="logo"></a>
+                                    <a href="#." class="mil-partner-frame" style="width: 150px;"><img src="img/partners/Copama.webp" alt="Copama"></a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="#." class="mil-partner-frame" style="width: 100px;"><img src="img/partners/2.svg" alt="logo"></a>
+                                    <a href="#." class="mil-partner-frame" style="width: 120px;"><img src="img/partners/friron.png" alt="Friron"></a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a href="#." class="mil-partner-frame" style="width: 150px;"><img src="img/partners/Toyota.webp" alt="Toyota"></a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a href="#." class="mil-partner-frame" style="width: 150px;"><img src="img/partners/Puragua.webp" alt="Puragua"></a>
                                 </div>
                             </div>
                         </div>
