--- a/novo/home-1.html
+++ b/novo/home-1.html
@@ -292,10 +292,10 @@
                             </div>
                             <div class="col-lg-5">
 
-                                <div class="mil-about-photo mil-mb-90">
+                                <div class="mil-about-photo mil-mb-120">
                                     <div class="mil-lines-place"></div>
-                                    <div class="mil-up mil-img-frame" style="padding-bottom: 56.25%;">
-                                        <video autoplay muted loop playsinline class="mil-scale" data-value-1="1" data-value-2="1.2">
+                                    <div class="mil-up mil-img-frame" style="padding-bottom:80.25%; aspect-ratio:16/9; position:relative;">
+                                        <video autoplay muted loop playsinline class="mil-scale" data-value-1="1" data-value-2="1.2" style="width:100%; height:100%; object-fit:cover; display:block;">
                                             <source src="../video/COOGD.mp4" type="video/mp4">
                                             Your browser does not support the video tag.
                                         </video>
@@ -479,22 +479,37 @@
                         <div class="swiper-container mil-infinite-show mil-up">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
-                                    <a href="#." class="mil-partner-frame" style="width: 150px;"><img src="img/partners/Agro.webp" alt="Agro"></a>
+                                    <a href="#." class="mil-partner-frame" style="width: 170px;"><img src="img/partners/Agro.webp" alt="Agro"></a>
                                 </div>
                                 <div class="swiper-slide">
                                     <a href="#." class="mil-partner-frame" style="width: 120px;"><img src="img/partners/HCR.png" alt="Hcr"></a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="#." class="mil-partner-frame" style="width: 150px;"><img src="img/partners/Copama.webp" alt="Copama"></a>
+                                    <a href="#." class="mil-partner-frame" style="width: 170px;"><img src="img/partners/Copama.webp" alt="Copama"></a>
                                 </div>
                                 <div class="swiper-slide">
                                     <a href="#." class="mil-partner-frame" style="width: 120px;"><img src="img/partners/friron.png" alt="Friron"></a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="#." class="mil-partner-frame" style="width: 150px;"><img src="img/partners/Toyota.webp" alt="Toyota"></a>
+                                    <a href="#." class="mil-partner-frame" style="width: 190px;"><img src="img/partners/Toyota.webp" alt="Toyota"></a>
                                 </div>
                                 <div class="swiper-slide">
                                     <a href="#." class="mil-partner-frame" style="width: 150px;"><img src="img/partners/Puragua.webp" alt="Puragua"></a>
+                                </div>
+                                 <div class="swiper-slide">
+                                    <a href="#." class="mil-partner-frame" style="width: 150px;"><img src="img/partners/Massuti.webp" alt="Massuti"></a>
+                                </div>
+                                 <div class="swiper-slide">
+                                    <a href="#." class="mil-partner-frame" style="width: 150px;"><img src="img/partners/Ideal.webp" alt="Ideal"></a>
+                                </div>
+                                 <div class="swiper-slide">
+                                    <a href="#." class="mil-partner-frame" style="width: 150px;"><img src="img/partners/piemon (1).png" alt="piemon"></a>
+                                </div>
+                                 <div class="swiper-slide">
+                                    <a href="#." class="mil-partner-frame" style="width: 110px;"><img src="img/partners/rical.png" alt="rical"></a>
+                                </div>
+                                 <div class="swiper-slide">
+                                    <a href="#." class="mil-partner-frame" style="width: 150px;"><img src="img/partners/vitasal.webp" alt="vitasal"></a>
                                 </div>
                             </div>
                         </div>
