--- a/novo/home-1.html
+++ b/novo/home-1.html
@@ -25,36 +25,57 @@
 
     <style>
         /* Push banner titles down so they don't stick to the top */
-        .mil-banner{ position: relative; overflow: hidden; }
-        .mil-banner .mil-banner-content{
-            padding-top: 210px;
+        .mil-banner {
+            position: relative;
+            overflow: hidden;
+        }
+
+        .mil-banner .mil-banner-content {
+            padding-top: 160px;
             padding-bottom: 50px;
-            position: relative; /* create stacking context for content */
+            position: relative;
+            /* create stacking context for content */
             z-index: 2;
         }
+
         /* Dark overlay to make text stand out */
-        .mil-banner .mil-gradient{
+        .mil-banner .mil-gradient {
             position: absolute;
-            inset: 0; /* top:0; right:0; bottom:0; left:0; */
+            inset: 0;
+            /* top:0; right:0; bottom:0; left:0; */
             background: rgba(0, 0, 0, 0.76);
             z-index: 1;
             pointer-events: none;
         }
-        @media (max-width: 1200px){
-            .mil-banner .mil-banner-content{ padding-top: 220px; }
-        }
-        @media (max-width: 768px){
-            .mil-banner .mil-banner-content{ padding-top: 180px; }
-            .mil-banner .mil-gradient{ background: rgba(0, 0, 0, 0.76);}
-        }
-            /* Force menu (hamburger) lines to white so icon matches text */
-            .mil-menu-btn span,
-            .mil-menu-btn span::before,
-            .mil-menu-btn span::after{
-                background-color: #fff !important;
+
+        @media (max-width: 1200px) {
+            .mil-banner .mil-banner-content {
+                padding-top: 220px;
             }
-            /* If icon uses stroke or color on SVG, ensure it becomes white */
-            .mil-menu-btn svg{ color: #fff !important; stroke: #fff !important; }
+        }
+
+        @media (max-width: 768px) {
+            .mil-banner .mil-banner-content {
+                padding-top: 180px;
+            }
+
+            .mil-banner .mil-gradient {
+                background: rgba(0, 0, 0, 0.76);
+            }
+        }
+
+        /* Force menu (hamburger) lines to white so icon matches text */
+        .mil-menu-btn span,
+        .mil-menu-btn span::before,
+        .mil-menu-btn span::after {
+            background-color: #fff !important;
+        }
+
+        /* If icon uses stroke or color on SVG, ensure it becomes white */
+        .mil-menu-btn svg {
+            color: #fff !important;
+            stroke: #fff !important;
+        }
     </style>
 
 </head>
@@ -214,7 +235,8 @@
                                             <h6 class="mil-muted mil-mb-30">Canada</h6>
 
                                             <p class="mil-light-soft mil-up">71 South Los Carneros Road, California
-                                                <span class="mil-no-wrap">+51 174 705 812</span></p>
+                                                <span class="mil-no-wrap">+51 174 705 812</span>
+                                            </p>
 
                                         </div>
                                         <div class="col-lg-4 mil-mb-60">
@@ -268,9 +290,7 @@
                 <section class="mil-banner"
                     style="background-image: url('img/partners/Capa.webp'); background-size: cover; background-position: center;">
                     <div class="mi-invert-fix">
-
                         <div class="mil-gradient"></div>
-
                         <div class="container">
                             <div class="mil-banner-content mil-up">
 
@@ -352,8 +372,11 @@
 
                                 <div class="mil-about-photo mil-mb-90">
                                     <div class="mil-lines-place"></div>
-                                    <div class="mil-up mil-img-frame" style="padding-bottom:30.25%; aspect-ratio:16/9; position:relative;">
-                                        <video autoplay muted loop playsinline class="mil-scale" data-value-1="1" data-value-2="1.2" style="width:100%; height:100%; object-fit:cover; display:block;">
+                                    <div class="mil-up mil-img-frame"
+                                        style="padding-bottom:30.25%; aspect-ratio:16/9; position:relative;">
+                                        <video autoplay muted loop playsinline class="mil-scale" data-value-1="1"
+                                            data-value-2="1.2"
+                                            style="width:100%; height:100%; object-fit:cover; display:block;">
                                             <source src="../video/COOGD.mp4" type="video/mp4">
                                             Your browser does not support the video tag.
                                         </video>
@@ -471,7 +494,8 @@
                         </div>
 
                         <h2 class="mil-center mil-up mil-mb-60">Nossos <span class="mil-thin">clientes:</span> <br>Veja
-                            <span class="mil-thin">o que eles dizem!</span></h2>
+                            <span class="mil-thin">o que eles dizem!</span>
+                        </h2>
 
                         <div class="mil-revi-pagination mil-up mil-mb-60"></div>
 
@@ -593,40 +617,48 @@
                         <div class="swiper-container mil-infinite-show mil-up">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
-                                    <a href="#." class="mil-partner-frame" style="width: 170px;"><img src="img/partners/Agro.webp" alt="Agro"></a>
+                                    <a href="#." class="mil-partner-frame" style="width: 170px;"><img
+                                            src="img/partners/Agro.webp" alt="Agro"></a>
                                 </div>
                                 <div class="swiper-slide">
                                     <a href="#." class="mil-partner-frame" style="width: 120px;"><img
                                             src="img/partners/HCR.png" alt="Hcr"></a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="#." class="mil-partner-frame" style="width: 170px;"><img src="img/partners/Copama.webp" alt="Copama"></a>
+                                    <a href="#." class="mil-partner-frame" style="width: 170px;"><img
+                                            src="img/partners/Copama.webp" alt="Copama"></a>
                                 </div>
                                 <div class="swiper-slide">
                                     <a href="#." class="mil-partner-frame" style="width: 120px;"><img
                                             src="img/partners/friron.png" alt="Friron"></a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="#." class="mil-partner-frame" style="width: 190px;"><img src="img/partners/Toyota.webp" alt="Toyota"></a>
+                                    <a href="#." class="mil-partner-frame" style="width: 190px;"><img
+                                            src="img/partners/Toyota.webp" alt="Toyota"></a>
                                 </div>
                                 <div class="swiper-slide">
                                     <a href="#." class="mil-partner-frame" style="width: 150px;"><img
                                             src="img/partners/Puragua.webp" alt="Puragua"></a>
                                 </div>
-                                 <div class="swiper-slide">
-                                    <a href="#." class="mil-partner-frame" style="width: 150px;"><img src="img/partners/Massuti.webp" alt="Massuti"></a>
+                                <div class="swiper-slide">
+                                    <a href="#." class="mil-partner-frame" style="width: 150px;"><img
+                                            src="img/partners/Massuti.webp" alt="Massuti"></a>
                                 </div>
-                                 <div class="swiper-slide">
-                                    <a href="#." class="mil-partner-frame" style="width: 150px;"><img src="img/partners/Ideal.webp" alt="Ideal"></a>
+                                <div class="swiper-slide">
+                                    <a href="#." class="mil-partner-frame" style="width: 150px;"><img
+                                            src="img/partners/Ideal.webp" alt="Ideal"></a>
                                 </div>
-                                 <div class="swiper-slide">
-                                    <a href="#." class="mil-partner-frame" style="width: 150px;"><img src="img/partners/piemon (1).png" alt="piemon"></a>
+                                <div class="swiper-slide">
+                                    <a href="#." class="mil-partner-frame" style="width: 150px;"><img
+                                            src="img/partners/piemon (1).png" alt="piemon"></a>
                                 </div>
-                                 <div class="swiper-slide">
-                                    <a href="#." class="mil-partner-frame" style="width: 110px;"><img src="img/partners/rical.png" alt="rical"></a>
+                                <div class="swiper-slide">
+                                    <a href="#." class="mil-partner-frame" style="width: 110px;"><img
+                                            src="img/partners/rical.png" alt="rical"></a>
                                 </div>
-                                 <div class="swiper-slide">
-                                    <a href="#." class="mil-partner-frame" style="width: 150px;"><img src="img/partners/vitasal.webp" alt="vitasal"></a>
+                                <div class="swiper-slide">
+                                    <a href="#." class="mil-partner-frame" style="width: 150px;"><img
+                                            src="img/partners/vitasal.webp" alt="vitasal"></a>
                                 </div>
                             </div>
                         </div>
