--- a/novo/home-1.html
+++ b/novo/home-1.html
@@ -792,31 +792,43 @@
                 </section>
                 <!-- service end -->
 
-                <!-- stats counter -->
-                <section class="mil-stats-counter" aria-label="COOGD stats" style="background:#000;">
-                    <div class="container-fluid mil-p-120-120">
-                        <div class="row justify-content-between align-items-center mil-stats-inner">
-                            <div class="col-md-6 col-lg-3 mil-stat-item">
-                                <h2 class="mil-stat-number no-plus" data-target="2016">0</h2>
-                                <p class="mil-stat-label">Criado em</p>
+                <div class="mil-dark-bg">
+                    <section class="mil-dark-bg">
+                        <div class="mi-invert-fix">
+                            <div class="mil-animation-frame">
+                                <div class="mil-animation mil-position-1 mil-scale" data-value-1="2.4" data-value-2="1.4"
+                                    style="top: 300px; right: -100px"></div>
+                                <div class="mil-animation mil-position-2 mil-scale" data-value-1="2" data-value-2="1"
+                                    style="left: 150px"></div>
                             </div>
-                            <div class="col-md-6 col-lg-3 mil-stat-item">
-                                <h2 class="mil-stat-number" data-target="100">0</h2>
-                                <p class="mil-stat-label">Clientes Satisfeitos</p>
-                            </div>
-                            <div class="col-md-6 col-lg-3 mil-stat-item">
-                                <h2 class="mil-stat-number" data-target="10000">0<span class="mil-stat-suffix">Kw</span>
-                                </h2>
-                                <p class="mil-stat-label">Capacidade instalada</p>
-                            </div>
-                            <div class="col-md-6 col-lg-3 mil-stat-item">
-                                <h2 class="mil-stat-number" data-target="11">0</h2>
-                                <p class="mil-stat-label">Milhões Poupados</p>
+                            <div>
+                                <section class="mil-stats-counter">
+                                    <div class="container-fluid mil-p-120-120">
+                                        <div class="row justify-content-between align-items-center mil-stats-inner">
+                                            <div class="col-md-6 col-lg-3 mil-stat-item">
+                                                <h2 class="mil-stat-number no-plus" data-target="2016">0</h2>
+                                                <p class="mil-stat-label">Criado em</p>
+                                            </div>
+                                            <div class="col-md-6 col-lg-3 mil-stat-item">
+                                                <h2 class="mil-stat-number" data-target="100">0</h2>
+                                                <p class="mil-stat-label">Clientes Satisfeitos</p>
+                                            </div>
+                                            <div class="col-md-6 col-lg-3 mil-stat-item">
+                                                <h2 class="mil-stat-number" data-target="10000">0<span class="mil-stat-suffix">Kw</span>
+                                                </h2>
+                                                <p class="mil-stat-label">Capacidade instalada</p>
+                                            </div>
+                                            <div class="col-md-6 col-lg-3 mil-stat-item">
+                                                <h2 class="mil-stat-number" data-target="11">0</h2>
+                                                <p class="mil-stat-label">Milhões Poupados</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </section>
                             </div>
                         </div>
-                    </div>
-                </section>
-                <!-- stats counter end -->
+                    </section>
+                </div>
 
                 <!-- other services -->
                 <section>
