--- a/novo/home-1.html
+++ b/novo/home-1.html
@@ -77,6 +77,32 @@
             color: #fff !important;
             stroke: #fff !important;
         }
+        /* Stats counter: keep inside site width and moderate number size */
+        .mil-stats-counter .mil-stat-item{ text-align: center; padding: 30px 20px; }
+        .mil-stats-counter .mil-stat-number{
+            font-size: clamp(40px, 7.5vw, 96px);
+            line-height: 1;
+            font-weight: 700;
+            margin: 0 0 12px;
+        }
+        .mil-stats-counter .mil-stat-label{ font-size: 15px; opacity: .85; }
+        /* Override Bootstrap col-* widths to make stat items flex equally */
+        .mil-stats-counter .col-md-6,
+        .mil-stats-counter .col-lg-7{
+            flex: 1 1 0 !important;
+            max-width: none !important;
+        }
+        @media (max-width: 992px){
+            /* Tablets: keep full width */
+            .mil-stats-counter .col-md-6,
+            .mil-stats-counter .col-lg-3{ flex: 1 1 0 !important; max-width: none !important; }
+        }
+        @media (max-width: 576px){
+            /* Mobile: stack vertically */
+            .mil-stats-counter .col-md-6,
+            .mil-stats-counter .col-lg-3{ flex: 0 0 100% !important; max-width: 100% !important; }
+            .mil-stats-counter .mil-stat-number{ font-size: clamp(28px, 9.5vw, 56px); }
+        }
     </style>
 
 </head>
@@ -482,7 +508,7 @@
 
                 <!-- reviews -->
                 <section class="mil-soft-bg">
-                    <div class="container mil-p-120-120">
+                                    <div class="container-fluid mil-p-120-120">
 
                         <div class="row">
                             <div class="col-lg-10">
@@ -803,22 +829,22 @@
                             </div>
                             <div>
                                 <section class="mil-stats-counter">
-                                    <div class="container-fluid mil-p-120-120">
+                                    <div class="container mil-p-100-100">
                                         <div class="row justify-content-between align-items-center mil-stats-inner">
-                                            <div class="col-md-6 col-lg-3 mil-stat-item">
+                                            <div class="col-md-6 col-lg-7 mil-stat-item">
                                                 <h2 class="mil-stat-number no-plus" data-target="2016">0</h2>
                                                 <p class="mil-stat-label">Criado em</p>
                                             </div>
-                                            <div class="col-md-6 col-lg-3 mil-stat-item">
+                                            <div class="col-md-6 col-lg-7 mil-stat-item">
                                                 <h2 class="mil-stat-number" data-target="100">0</h2>
                                                 <p class="mil-stat-label">Clientes Satisfeitos</p>
                                             </div>
-                                            <div class="col-md-6 col-lg-3 mil-stat-item">
+                                            <div class="col-md-6 col-lg-7 mil-stat-item">
                                                 <h2 class="mil-stat-number" data-target="10000">0<span class="mil-stat-suffix">Kw</span>
                                                 </h2>
                                                 <p class="mil-stat-label">Capacidade instalada</p>
                                             </div>
-                                            <div class="col-md-6 col-lg-3 mil-stat-item">
+                                            <div class="col-md-6 col-lg-7 mil-stat-item">
                                                 <h2 class="mil-stat-number" data-target="11">0</h2>
                                                 <p class="mil-stat-label">Milhões Poupados</p>
                                             </div>
@@ -857,8 +883,8 @@
                                         modelo, gerenciamos a produção e o rateio da energia, oferecendo uma alternativa
                                         sustentável para quem deseja reduzir os custos na conta de luz.</p>
                                     <ul class="mil-service-list mil-dark mil-mb-30">
-                                        <li class="mil-up">Adicione um título</li>
-                                        <li class="mil-up">Adicione um título</li>
+                                        <li class="mil-up">Produção Segura</li>
+                                        <li class="mil-up">Redução de Custos</li>
                                     </ul>
                                 </a>
 
@@ -873,9 +899,9 @@
                                         elétrica e convertida em créditos, que são abatidos de forma automática na
                                         fatura de energia do consumidor.</p>
                                     <ul class="mil-service-list mil-dark mil-mb-30">
-                                        <li class="mil-up">Adicione um título</li>
-                                        <li class="mil-up">Adicione um título</li>
-                                        <li class="mil-up">Adicione um título</li>
+                                        <li class="mil-up">Créditos Automatizados</li>
+                                        <li class="mil-up">Fluxo Eficiente</li>
+                                        <li class="mil-up">Conexão Segura</li>
                                     </ul>
                                 </a>
 
@@ -889,9 +915,9 @@
                                         para diminuir suas contas de luz, garantindo economia real e sustentável mês a
                                         mês.</p>
                                     <ul class="mil-service-list mil-dark mil-mb-30">
-                                        <li class="mil-up">Adicione um título</li>
-                                        <li class="mil-up">Adicione um título</li>
-                                        <li class="mil-up">Adicione um título</li>
+                                        <li class="mil-up">Economia Imediata</li>
+                                        <li class="mil-up">Processo Simples</li>
+                                        <li class="mil-up">Consumo Otimizado</li>
                                     </ul>
                                 </a>
 
